Criticism/criticism.css
body{
	margin-top: 0
}

#full {
	width: 100%;
	max-height: 100%;
	background-color: white;
	
}

#Section0 {
	background-color: white;
	
}

#writername {
	float: right;
	right: 20px;
	top: 20px;
	margin-right: 20px;
	color: #e6c222;
	font-family: "Didot";
  align-items: center;
}

#Section1 {
	background-color: white;
}

.header-image {
	width: 100%;
  height: auto;
  margin-top: 10px;
}

.dropbtn {
  background-color: gold;
  color: white;
  padding: 16px;
  font-size: 16px;
  margin-top: 20px;
  Margin-left: 20px; 
  border: none;
  cursor: pointer;
  font-family: 'Merriweather';
}

.dropbtn:hover, .dropbtn:focus {
  background-color: #91cdd9;
  Color: black;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: white;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  font-family: 'Merriweather';
  
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown-content a:hover {
   background-color: #f2eeee
}
#Section2 {
	background-color: white;
	margin: 40px;
}

#Section3 {
	background-color: white;
	margin: 40px;
}

p {
  font-size: 18px;
  text-indent: 50px;
}


table, th, td {
  border:2px solid grey;
  vertical-align: center;
}

table {
  border-collapse: collapse;
  border: 1px solid;
}

th {
  text-align: center;
  vertical-align: center;
  background-color: #91cdd9;
  padding: 1px; 
}

tr:hover {background-color:  #e9e6eb;}


td {
  text-align: left;
  padding: 15px;
}

img {
  width: 66px; 
  height: 66px;
}

.left-title-cell{
  border-right: none;
  text-align: left;
}

.right-title-cell{
  border-left: none;
}

#Section5 {
	background-color: white;
  text-align: center;
  font-size: 14px;
	
}

#Section6 {
	background-color: white;
	flex: 1;
	float: right; 
}

#copyright {
	background-color: white;
	flex: 1;
	text-align: center;
}

/* Changing name to only be on separate lines if screen is too small */
@media only screen and (min-width: 700px) {
  #writername br{
   display: none;
  }
}

/* Changing font size of name to get gradually smaller on smaller screens*/

/* Between 390px and 490px width screens, use font size of 20px */
@media only screen and (min-width: 390px) and (max-width: 490px) {
  #writername h1{
   font-size: 20px
  }
}

/* For screens smaller than 390px, use a font size of 16px */
@media only screen and (max-width: 390px) {
  #writername h1{
    font-size: 16px;
  }
}


/* For screens smaller than 590px wide, change main body of text to have smaller font size */
@media only screen and (max-width: 590px) {
  #Section1 p{
    font-size: 15px;

  }
}

@media (max-width: 600px) {
  #Section1,
  #Section2 {
    padding: 10px !important;
    margin: 5px !important;
  }
  .header-image {
    width: 100%;
    height: auto;
  }
}

